# MyShowCase

./: .gitignore  LINKEDIN_BIO_en.md  LINKEDIN_BIO_pt.md  README.md  README_short.md  requirements.txt
dev-statistic/estimator_detector/: LICENSE  README.md  pyproject.toml
dev-statistic/estimator_detector/estimator_detector/: __init__.py  adapter.py  detector.py  drift.py  ensemble.py  losses.py  models.py  stats.py  transforms.py  winsorize.py
dev-statistic/estimator_detector/estimator_detector/tests/: test_detector.py
dl-refactor-kata/: .gitignore  README.md  pyproject.toml
dl-refactor-kata/ src/dl_trainer/: init.py
dl-refactor-kata/docs/: PATTERNS.md
dl-refactor-kata/examples/: advanced_usage.py  basic_usage.py  dl_refactoring.py
dl-refactor-kata/src/dl_trainer/: callbacks.py
etransformer/MLOps-Consulting-Framework/MLOps-Consulting-Framework/: .gitignore  README.md  pyproject.toml  requirements.txt
hyperbolic-intelligence/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
hyperbolic-intelligence/configs/: default.yaml
hyperbolic-intelligence/docs/diagrams/: cgt_experiment_pipeline.html
hyperbolic-intelligence/docs/guide/: HAKORN_README.md
hyperbolic-intelligence/examples/: hakorn_cgt_integration.py
hyperbolic-intelligence/experiments/: __init__.py  run_all_experiments.py
hyperbolic-intelligence/experiments/ablations/: __init__.py  bq_comparison.py  dimensional_ablation.py  euclidean_ablation.py  geometric_capacity.py  mrl_comparison.py
hyperbolic-intelligence/experiments/analysis/: __init__.py  qualitative_analysis.py  statistical_robustness.py  storage_efficiency.py
hyperbolic-intelligence/experiments/benchmarks/: __init__.py  cascade_compression.py  dataset_configs.py  latency_benchmark.py  mteb_evaluation.py  multi_model_benchmark.py
hyperbolic-intelligence/experiments/publication/: __init__.py  configs.py  outputs.py  runner.py  tree_protocols_standalone.py
hyperbolic-intelligence/experiments/unified/: __init__.py  config.py  evaluation.py  final_executor.py  final_executor_v2.py  final_executor_v3.py  final_executor_v4.py  final_executor_v5.py  graph_constructor.py  hybrid_active_trainer.py  hybrid_config.py  hybrid_executor.py  infer_architecture_snippet.py  psi_slm_trainer.py  replication_configs.py  replication_executor.py  trainer.py  unified_runner.py
hyperbolic-intelligence/experiments/validation/: cgt_validation_integration.py  cgt_validation_protocol.py
hyperbolic-intelligence/experiments/visualization/: __init__.py  geometric_viz.py  plotting.py
hyperbolic-intelligence/notebooks/: CGT_GW.ipynb  HFW_Experiment_GRDA_19071240 _.ipynb  HyDRA.ipynb  HyDRA_Magnetic_V2Beta.ipynb  HyDRA_Magnetic_Visualizer_V2Beta.ipynb  HyDRA_Visualizer_v6Beta.ipynb  HyDRA_v2.ipynb  HyDRA_v3.ipynb  HyDRA_v3Beta_TemporalBinding.ipynb  HyDRA_v4_part1.ipynb  HyDRA_v4_part2.ipynb  HyDRA_v5Beta_AnosovTopo.ipynb  HyDRA_v6Beta_GCM.ipynb  Hybrid_Geometric_PoC_Validated.ipynb  Paper_Hyperbolic_Formal_Implementation.ipynb  SGCR_Synthetic_Experiment_19076462.ipynb  final_experiment_launcher_v0.ipynb  final_experiment_launcher_v1.ipynb  final_experiment_launcher_v10.ipynb  final_experiment_launcher_v11.ipynb  final_experiment_launcher_v12ipynb  final_experiment_launcher_v13.ipynb  final_experiment_launcher_v2.ipynb  final_experiment_launcher_v3.ipynb  final_experiment_launcher_v4.ipynb  final_experiment_launcher_v5.ipynb  final_experiment_launcher_v6.ipynb  final_experiment_launcher_v7.ipynb  final_experiment_launcher_v7_PATCHED.ipynb  final_experiment_launcher_v8.ipynb  final_experiment_launcher_v9.ipynb  h_akorn_llm_training.ipynb  hakorn_colab_notebook.ipynb  hakorn_notebook.ipynb  prototype_hyperbolic_llm_training_building.ipynb  tree_protocols_colab_final.ipynb
hyperbolic-intelligence/scripts/: evaluate.py  run_validation.py  train.py  train_hakorn.py
hyperbolic-intelligence/src/: __init__.py
hyperbolic-intelligence/src/cgt/: __init__.py
hyperbolic-intelligence/src/cgt/HyDRA/: HyDRA_Physics_Universe_V0.ipynb  HyDRA_Visualizer_V7.ipynb  HyDRA_v7_GCM.ipynb
hyperbolic-intelligence/src/cgt/api/: entrypoint.py
hyperbolic-intelligence/src/cgt/config/: __init__.py  dynamics_config_v2.py
hyperbolic-intelligence/src/cgt/diagnostics/: __init__.py  degeq.py  gw_monitor.py  hpc_guard.py  hysteresis.py
hyperbolic-intelligence/src/cgt/distillation/: __init__.py  active_integration_v7.py  adaptive_controller.py  dataset_v2.py  distillation_v2.py  geometric_distillation.py  gpt2_distillation.py  hyperbolic_projector.py
hyperbolic-intelligence/src/cgt/dynamics/: __init__.py  geometric_controller.py  kuramoto_v2.py  magnetic_friction_scheduler.py  pcgrad.py  riemannian_adamw.py  riemannian_update_v2.py  trajectory_v2.py
hyperbolic-intelligence/src/cgt/embeddings/: __init__.py  distance.py  encoder.py  index.py  pipeline.py  retrieval.py
hyperbolic-intelligence/src/cgt/evaluation/: __init__.py  benchmarks.py  metrics.py  thesis_falsification.py
hyperbolic-intelligence/src/cgt/experiments/: __init__.py  adaptive_cgt_controller.py  adaptive_cgt_controller_v3.py  part1_reference.py  trainer.py  trainer_hardened.py
hyperbolic-intelligence/src/cgt/geometry/: __init__.py  frechet.py  lorentz.py  lorentz_hardened.py  lorentz_v2.py
hyperbolic-intelligence/src/cgt/guard/: __init__.py  domain_guard_v2.py  paranoid_monitor_v2.py
hyperbolic-intelligence/src/cgt/integration/: __init__.py  active_integration.py  active_integration_v7.py  dynamic_slm_v2.py  magnetic_friction.py
hyperbolic-intelligence/src/cgt/k_light/: __init__.py  losses.py
hyperbolic-intelligence/src/cgt/losses/: __init__.py  anosov_topo_loss.py  core.py  hybrid_active_loss.py  hyperbolic_lm_losses.py  losses_hardened.py  persistence_landscape.py  topo_bootstrap.py  volume_weighted.py
hyperbolic-intelligence/src/cgt/models/: __init__.py  angular_physics.py  (+18 more)
hyperbolic-intelligence/tests/: __init__.py  conftest.py  test_dtype_consistency.py  test_installation_hakorn.py  test_lorentz.py  test_losses.py  test_models.py
mlops_consulting/: README.md  pyproject.toml
(+396 files in other folders)
