[tool.poetry]
name = "mlops-consulting-framework"
version = "0.1.0"
description = "Framework para consultoria e implementação de MLOps"
authors = ["Eric Gustavo Reis de Sena <egrsena@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "*"
pandas = "*"
pyyaml = "*"
loguru = "*"
crewAI = "*"
langchain = "*"
openai = "*"
tensorflow = "*"
scikit-learn = "*"
fastapi = "*"
uvicorn = "*"
pytest = "*"
docker = "*"
kubernetes = "*"
mlflow = "*"
apache-airflow = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
